--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
 body {
     background-color: cornflowerblue;
+    font-family: Arial, Helvetica, sans-serif;
     
+}
+
+.title {
+    color:orangered;
+    text-align: center;
+
 }
 
 .center {
@@ -11,6 +18,6 @@ body {
 }
 
 .medImg {
-    width: 425px;
+    width: 450px;
     height: 500px;
 }
