--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 }
 
-.center {
+/*.center {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -20,4 +20,17 @@ body {
 .medImg {
     width: 450px;
     height: 500px;
+}*/
+
+.assignment {
+    display: flex;
+    padding: 10px;
+    background: yellow;
+    margin: 10px;
+}
+
+.assignment img{
+    width:200px;
+    padding: 10px;
+    
 }
