--- a/style.css
+++ b/style.css
@@ -5,37 +5,11 @@ body {
 }
 
 .title {
-    color:orangered;
+    color:rgb(255, 255, 255);
     text-align: center;
 
 }
 
-
-/*.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 69%;
-}
-
-.medImg {
-    width: 450px;
-    height: 500px;
-}*/
-
-.assignments {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.assignment {
-    width: 22%;
-    padding: 10px;
-    padding: 20px 10px;
-    background: yellow;
-    margin: 10px;
-    border-radius: 7px;
-}
 
 .assignment img{
     width:200px;
@@ -50,10 +24,6 @@ body {
     border: 4px dashed #030592ab;
 }
 
-h2 {
-    text-align: center;
-}
-
 a {
     text-decoration: none;
     color: purple;
@@ -62,3 +32,93 @@ a {
 a:hover {
     color: violet;
 }
+
+.bottom {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    letter-spacing: 1px;
+    line-height: 0.2px;
+    /*background-color: red;*/
+    color: white;
+    text-align: center;
+  }
+
+  header {  
+    background-color: rgb(255, 255, 0);  
+    position: fixed;  
+    left: 0;  
+    right: 0;  
+    top: 70px;  
+    height: 30px;  
+    display: flex;  
+    align-items: center;  
+    box-shadow: 0 0 5px 0 black; 
+    }  
+
+    header * {  
+    display: inline;
+    }  
+
+    header li {  
+    margin: 20px; 
+    }  
+
+    header li a {  
+    color: blue;  
+    text-decoration: none;
+    }  
+
+    .start_index {
+        margin-top: 70px;
+    }
+
+    .news_box {
+        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
+        width: 88px;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+        border: 10px red;
+        margin-top: 70px;
+        background-color: white;
+    }
+
+    .smaller_text {
+        font-size: smaller;
+    }
+
+    .stories {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .story {
+        width: 22%;
+        padding: 10px;
+        padding: 20px 10px;
+        background: yellow;
+        margin: 10px;
+        border-radius: 7px;
+    }
+    
+    .story img{
+        width:200px;
+        height: 134px;/*may be removed if images act up*/
+        border: 4px solid #0a968fab;
+        margin: 10px;
+        display: block;
+        margin: auto;
+        
+    }
+    
+    .story img:hover{
+        border: 4px dashed #030592ab;
+    }
+
+    .story h2 {
+        text-align: center;
+    }
