--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ a:hover {
 }
 
 .bottom {
-    position: fixed;
+    position:fixed;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -47,7 +47,7 @@ a:hover {
 
   header {  
     background-color: rgb(255, 255, 0);  
-    position: fixed;  
+    position: absolute; 
     left: 0;  
     right: 0;  
     top: 70px;  
@@ -120,5 +120,37 @@ a:hover {
     }
 
     .story h2 {
+        text-align: center;
+    }
+
+    .entries {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .entry {
+        width: 100%;
+        padding: 10px;
+        padding: 20px 10px;
+        background: yellow;
+        margin: 10px;
+        border-radius: 7px;
+    }
+
+    .entry img{
+        width:200px;
+        height: 134px;/*may be removed if images act up*/
+        border: 4px solid #0a968fab;
+        margin: 10px;
+        display: block;
+        margin: auto;
+        
+    }
+    
+    .entry img:hover{
+        border: 4px dashed #030592ab;
+    }
+
+    .entry h2 {
         text-align: center;
     }
